<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".SendOTPActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        
        <ImageView
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_130sdp"
            android:layout_marginTop="@dimen/_80sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_sent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/otp_verification"
            android:textColor="@color/colorTextPrimary"
            android:textStyle="bold"
            android:textSize="@dimen/_20ssp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/we_will_send_you_an_otp_on_this_mobile_number"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/colorTextSecondary"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:gravity="center"
            android:text="@string/enter_mobile_number"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/colorTextSecondary"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_60sdp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:text="+20 "
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/colorTextPrimary"/>

            <EditText
                android:id="@+id/et_inputMobile"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:background="@null"
                android:hint="12353663451"

                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/colorTextPrimary"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:layout_marginHorizontal="@dimen/_70sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:background="@color/colorDivider"/>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/btn_getOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_30sdp"
        android:text="@string/get_otp"
        android:background="@drawable/button_bg"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:visibility="gone"/>
</FrameLayout>

    </LinearLayout>
        

</ScrollView>